fix(config): improve again on small screens

--- a/style.css
+++ b/style.css
@@ -706,7 +706,6 @@ td.tableCardName {
     display: flex;
     flex-direction: column;
     align-items: center;
-    
     border-style: solid;
     border-image: url(./images/modale.png);
     border-image-width: 25;
@@ -714,6 +713,7 @@ td.tableCardName {
     color: #f3f3f3;
     text-align: center;
 	padding: 16px;
+	max-height: 100%;
 }
 
 @media (min-width: 650px) {
@@ -994,7 +994,7 @@ fieldset {
     border-radius: 20px;
     padding: 16px;
     text-align: left;
-	margin: 24px;
+	margin: 8px;
 	flex-shrink: 0;
 	box-sizing: border-box;
 	width: 80%;
@@ -1003,6 +1003,7 @@ fieldset {
 @media (min-width: 650px) {
     fieldset {
         width: auto;
+		margin: 24px;
     }
 }
 
